# JAKS

./: .gitignore  INTEGRATION_TESTING.md  README.md  compare_circuits.py  dummy_output.txt.json  environment.yml  install.ps1  install.sh  output1.json  pip-extras.txt  pyproject.toml  run_experiment.ps1  run_experiment_paren.ps1  test.ipynb  test1.json  test3.json  test_circuit_scores.py  test_integration.py  test_small_model.py
circuit-stability/: activate_environment.sh  install.sh  install_auto.sh
circuit-stability/code/: 0_th_thought_0_th_variation.png.json  0_th_thought_0_th_variation_score.json  0_th_thought_1_th_variation.png.json  0_th_thought_1_th_variation_score.json  0_th_thought_2_th_variation.png.json  0_th_thought_2_th_variation_score.json  0_th_thought_3_th_variation.png.json  0_th_thought_3_th_variation_score.json  0_th_thought_4_th_variation.png.json  0_th_thought_4_th_variation_score.json  compare_circuits.py  run_circuit_stability.sh
circuit-stability/documentation/: figures-doc.md  notebooks-doc.md
circuit-stability/notebooks-source/: benchmark.ipynb  bool-no-paren.ipynb  precedence.ipynb  prompting-copy.ipynb  prompting.ipynb
circuit-stability/results/: analysis.py  output.pkl.json  output_paren.json
cs-venv/: pyvenv.cfg
results/: result_analysis.py
results/json_png/: test1.json
src/experiments/: baseline.py  create_tree.py  cross_generate.py  evolution.py  (+3 more)
tree-of-thought/: INSTALLATION_COMPLETE.md  README.md  activate_tot.sh  install_tot.sh  requirements.txt  run.py
tree-of-thought-llm/: README.md  requirements.txt  run.py
(+48 files in other folders)
