[project]
name = "circuit-discovery"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1.0",
    "transformer-lens>=2.0.0",
    "einops>=0.7.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "networkx>=3.0",  # For circuit visualization
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "pandas>=2.0.0",
    "jaxtyping>=0.2.0",  # Type annotations for tensors
    "typeguard>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "ipykernel>=6.0.0",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.black]
line-length = 100